--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-ha ha this is my little site
+<!DOCTYPE html>
+<html>
+
+	<head>
+		<meta charset="utf-8">
+		<title>( ˘ ³˘(◡‿◡˶)</title>
+		<meta name="description" content="⋆⛧┈┈┈┈﹤୨♡୧﹥ ┈┈┈┈⛧⋆">
+		<link rel="shortcut icon" href="/favicon.ico">
+		<link rel="stylesheet" type="text/css" href="stylesheet.css">
+		<script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
+	</head>
+	
+	<body>
+	
+	<div class="center">
+		<img src="img/fresh2.png" width=480px></br></br>
+		<center>
+			ha ha this is my little site
+		</center>
+	</div>
+	
+	</body>
+	
+</html>
