--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
 	<body>
 	
 	<div class="center">
+		<video height="1080" autoplay loop muted>
+		  <source src="/files/chaogarden-bg.mp4" type="video/mp4" />
+		</video>
+	</div>
+	
+	<div class="center">
 		<img src="img/fresh2.png" width=480px></br></br>
 		<center>
 			ha ha this is my little site
