--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 	
 	<div class="center">
 		<video height="1080" autoplay loop muted>
-		  <source src="/files/chaogarden-bg.mp4" type="video/mp4" />
+		  <source src="/files/0001-0160.mp4" type="video/mp4" />
 		</video>
-	</div>
+		</div>
 	
 	<div class="center">
 		<img src="img/fresh2.png" width=480px></br></br>
