--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 	
 	<div class="center">
 		<video height="1080" autoplay loop muted>
-		  <source src="/files/0001-0160.mp4" type="video/mp4" />
+		  <source src="/files/chaogarden-bg.webm" type="video/webm" />
 		</video>
 		</div>
 	
 	<div class="center">
-		<img src="img/fresh2.png" width=480px></br></br>
+		<a href="#"><img src="img/fresh2.png" width=480px></a></br></br>
 		<center>
 			ha ha this is my little site
 		</center>
