--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 	
 	<body>
 	
-	<div class="center">
-		<video height="1080" autoplay loop muted>
+	<div class="video-bg">
+		<video height="100%" autoplay loop muted>
 		  <source src="/files/chaogarden-bg.webm" type="video/webm" />
 		</video>
 	</div>
