--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<body>
 	
 	<div class="video-bg">
-		<video height="100%" autoplay loop muted>
+		<video width="100%" autoplay loop muted>
 		  <source src="/files/chaogarden-bg.webm" type="video/webm" />
 		</video>
 	</div>
