vertically center video bg

--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 	</head>
 	
 	<body>
-	
 	<div class="video-bg">
-		<video width="100%" autoplay loop muted>
-		  <source src="/files/chaogarden-bg.webm" type="video/webm" />
-		</video>
+		<div class="vertical-center">
+			<video width="100%" autoplay loop muted>
+			  <source src="/files/chaogarden-bg.webm" type="video/webm" />
+			</video>
+		</div>
 	</div>
 	
 	<div class="center">
