--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	
 	<body>
 	<div class="video-bg">
-		<div class="vertical-center">
+		<div class="center">
 			<video width="100%" autoplay loop muted>
 			  <source src="/files/chaogarden-bg.webm" type="video/webm" />
 			</video>
