--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
 		<meta name="description" content="⋆⛧┈┈┈┈﹤୨♡୧﹥ ┈┈┈┈⛧⋆">
 		<link rel="shortcut icon" href="/favicon.ico">
 		<link rel="stylesheet" type="text/css" href="stylesheet.css">
-		<script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
+		<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+	    <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>
+	    <script>
+	    $( function() {
+		  $( "#draggable" ).draggable();
+	    } );
+	    </script>
 	</head>
 	
 	<body>
@@ -25,6 +31,8 @@
 			ha ha this is my little site
 		</center>
 	</div>
+	
+	<div id="draggable"><img src="img/fresh2.png" width=480px></div>
 	
 	</body>
 	
