Revert "Update index.html"
This reverts commit 39e0b9f6454e65d95774b8f8a002a937634d043f.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	
 	<body>
 	<div class="video-bg">
-		<div class="center">
+		<div class="vertical-center">
 			<video width="100%" autoplay loop muted>
 			  <source src="/files/chaogarden-bg.webm" type="video/webm" />
 			</video>
