drag hand cursor

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			</center>
 		</div>
 		
-		<div id="draggable"><img src="img/fresh2.png" width=480px></div>
+		<div id="draggable" class="draggable"><img src="img/fresh2.png" width=480px></div>
 	
 	</body>
 	
