--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<body>
 	
 		<div class="video-bg">
-			<video width="100%" height="100%" autoplay loop muted>
+			<video height="100%" width="100%" autoplay loop muted>
 			  <source src="/files/chaogarden-bg.webm" type="video/webm" />
 			</video>
 		</div>
