--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<body>
 	
 		<div class="video-bg">
-			<video autoplay loop muted>
+			<video style="object-fit: fill;" autoplay loop muted>
 			  <source src="/files/chaogarden-bg.webm" type="video/webm" />
 			</video>
 		</div>
