--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 		</div>
 		
 		<div class="center">
-			<a href="#"><img src="img/fresh2.png" width=480px></a></br></br>
+			<a href="#"><img src="img/fresh2.png" width=480vw></a></br></br>
 			<center>
 				ha ha this is my little site
 			</center>
 		</div>
 		
-		<div id="draggable" class="draggable"><img src="img/fresh2.png" width=480px></div>
+		<div id="draggable" class="draggable"><img src="img/fresh2.png" width=480vw></div>
 	
 	</body>
 	
