--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	
 		<div class="video-bg">
 			<video autoplay loop muted>
-			  <source src="/files/chaogarden-bg.webm" type="video/webm" />
+			  <source src="files/chaogarden-bg.webm" type="video/webm" />
 			</video>
 		</div>
 		
