--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 	    <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>
 	    <script>
 			$( function() {
-			  $( "#draggable" ).draggable();
+			  $( "#draggable1" ).draggable();
+			  $( "#draggable2" ).draggable();
+			  $( "#draggable3" ).draggable();
+			  $( "#draggable4" ).draggable();
+			  $( "#draggable5" ).draggable();
 			} );
 	    </script>
 	</head>
@@ -24,14 +28,23 @@
 			</video>
 		</div>
 		
-		<div class="center">
-			<a href="#"><img src="img/fresh2.png" width=480vw></a></br></br>
+		<div class="txt" style="top: 66%; left: 40%;">
 			<center>
+				</br></br></br></br>
 				ha ha this is my little site
 			</center>
 		</div>
 		
-		<div id="draggable" class="draggable"><img src="img/fresh2.png" width=480vw></div>
+		<div class="img" style="top: 60vw; left: 10vw;"><img src="img/reward.png" width=480vw></div>
+		
+		<div id="draggable4" class="draggable" style="top: 4vw; right: 4vw;"><img src="img/starpointer.png" width=270vw></div>
+		
+		<div id="draggable1" class="draggable" style="top: 22vw; right: 10vw;"><img src="img/fresh2.png" width=480vw></div>
+		<div id="draggable2" class="draggable" style="top: 46.5vw; left: 20vw;"><img src="img/flowerbear.png" width=480vw></div>
+		
+		<div id="draggable3" class="draggable" style="top: 8vw; left: 8vw;"><img src="img/starpointer.png" width=300vw></div>
+		<div id="draggable5" class="draggable" style="top: 32vw; right: 18vw;"><img src="img/starpointer.png" width=360vw></div>
+		
 	
 	</body>
 	
