--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 		</div>
 		
 		<div class="img" style="top: 60vw; left: 10vw;"><img src="img/reward.png" width=480vw></div>
+		<div class="img" style="top: 180vw; left: 10vw;"><img src="img/dragon.gif" width=720vw></div>
 		
 		<div id="draggable4" class="draggable" style="top: 4vw; right: 4vw;"><img src="img/starpointer.png" width=270vw></div>
 		
