image scale based on viewport + code clean up

--- a/index.html
+++ b/index.html
@@ -35,16 +35,47 @@
 			</center>
 		</div>
 		
-		<div class="img" style="top: 60vw; left: 10vw;"><img src="img/reward.png" width=480vw></div>
-		<div class="img" style="top: 180vw; left: 10vw;"><img src="img/dragon.gif" width=720vw></div>
+		<div class="img" style="
+			top:  60vw; 
+			left: 10vw;
+			width: 25vw;
+		"><img src="img/reward.png"></div>
 		
-		<div id="draggable4" class="draggable" style="top: 4vw; right: 4vw;"><img src="img/starpointer.png" width=270vw></div>
+		<div class="img" style="
+			top:   180vw; 
+			left:  10vw;
+			width: 37.5vw;
+		"><img src="img/dragon.gif"></div>
 		
-		<div id="draggable1" class="draggable" style="top: 22vw; right: 10vw;"><img src="img/fresh2.png" width=480vw></div>
-		<div id="draggable2" class="draggable" style="top: 46.5vw; left: 20vw;"><img src="img/flowerbear.png" width=480vw></div>
+		<div id="draggable4" class="draggable" style="
+			top:   4vw; 
+			right: 4vw; 
+			width: 10vw;
+		"><img src="img/starpointer.png"></div>
 		
-		<div id="draggable3" class="draggable" style="top: 8vw; left: 8vw;"><img src="img/starpointer.png" width=300vw></div>
-		<div id="draggable5" class="draggable" style="top: 32vw; right: 18vw;"><img src="img/starpointer.png" width=360vw></div>
+		<div id="draggable1" class="draggable" style="
+			top:   22vw; 
+			right: 10vw; 
+			width: 25vw;
+		"><img src="img/fresh2.png"></div>
+		
+		<div id="draggable2" class="draggable" style="
+			top:   46.5vw; 
+			left: 20vw; 
+			width: 25vw;
+		"><img src="img/flowerbear.png"></div>
+		
+		<div id="draggable3" class="draggable" style="
+			top:   8vw; 
+			left:  8vw; 
+			width: 10vw;
+		"><img src="img/starpointer.png"></div>
+		
+		<div id="draggable5" class="draggable" style="
+			top:   32; 
+			right: 18vw; 
+			width: 10vw;
+		"><img src="img/starpointer.png"></div>
 		
 	
 	</body>
