fixed more scaling issues

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			</video>
 		</div>
 		
-		<div class="txt" style="top: 66%; left: 40%;">
+		<div class="txt" style="top: 33vw; left: 40vw;">
 			<center>
 				</br></br></br></br>
 				ha ha this is my little site
@@ -49,19 +49,19 @@
 		
 		<div id="draggable4" class="draggable" style="
 			top:   4vw; 
-			right: 4vw; 
+			left:  14vw; 
 			width: 10vw;
 		"><img src="img/starpointer.png"></div>
 		
 		<div id="draggable1" class="draggable" style="
 			top:   22vw; 
-			right: 10vw; 
+			left:  65vw; 
 			width: 25vw;
 		"><img src="img/fresh2.png"></div>
 		
 		<div id="draggable2" class="draggable" style="
 			top:   46.5vw; 
-			left: 20vw; 
+			left:  20vw; 
 			width: 25vw;
 		"><img src="img/flowerbear.png"></div>
 		
@@ -72,8 +72,8 @@
 		"><img src="img/starpointer.png"></div>
 		
 		<div id="draggable5" class="draggable" style="
-			top:   32; 
-			right: 18vw; 
+			top:   32vw; 
+			left:  55vw; 
 			width: 10vw;
 		"><img src="img/starpointer.png"></div>
 		
