link img hover animation

--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
 			</center>
 		</div>
 		
+		<div class="img link" style="
+			top:  10vw;
+			left: 10vw;
+			width:20vw;
+		"><a href="mailto:miaveitch42@gmail.com"><img src="img/bearmail.png"></a></div>
+		
 		<div class="img" style="
 			top:  60vw; 
 			left: 10vw;
