fixed gallery depth sorting issue

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -13,7 +13,7 @@
 	
 	<body>
 		<div class="gallery">
-			<div id="gallery-frame" style="
+			<div class="gallery-frame" style="
 				top:  10vw;
 				left: 10vw;
 				width:20vw;
@@ -29,7 +29,7 @@
 				
 			</div>
 			
-			<div id="gallery-frame" style="
+			<div class="gallery-frame" style="
 				top:  10vw;
 				left: 50%;
 				-ms-transform: translateX(-50%);
@@ -45,7 +45,7 @@
 				</div>
 			</div>
 			
-			<div id="gallery-frame" style="
+			<div class="gallery-frame" style="
 				top:  10vw;
 				left: 70vw;
 				width:20vw;
@@ -60,7 +60,7 @@
 				</div>
 			</div>
 			
-			<div id="gallery-frame" style="
+			<div class="gallery-frame" style="
 				top:  40vw;
 				left: 10vw;
 				width:20vw;
@@ -74,7 +74,7 @@
 				</div>
 			</div>
 			
-			<div id="gallery-frame" style="
+			<div class="gallery-frame" style="
 				top:  40vw;
 				left: 50%;
 				-ms-transform: translateX(-50%);
@@ -90,7 +90,7 @@
 				</div>
 			</div>
 			
-			<div id="gallery-frame" style="
+			<div class="gallery-frame" style="
 				top:  40vw;
 				left: 70vw;
 				width:20vw;
