--- a/index.html
+++ b/index.html
@@ -47,6 +47,15 @@
 			width: 25vw;
 		"><img src="img/reward.png"></div>
 		
+		<div class="yt" style="
+			top:  110vw; 
+			left: 60vw;
+			width: 25vw;
+			height: 25vw;
+		">
+			<iframe width="100%" height="100%" src="https://www.youtube.com/embed/RrCO88AJhaw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		</div>
+		
 		<div class="img" style="
 			top:   180vw; 
 			left:  10vw;
@@ -83,7 +92,7 @@
 			width: 10vw;
 		"><img src="img/starpointer.png"></div>
 		
-	
+		
 	</body>
 	
 </html>
