we're in a tight spot

--- a/index.html
+++ b/index.html
@@ -47,14 +47,25 @@
 			width: 25vw;
 		"><img src="img/reward.png"></div>
 		
-		<div class="yt" style="
-			top:  110vw; 
-			left: 60vw;
-			width: 25vw;
-			height: 25vw;
-		">
-			<iframe width="100%" height="100%" src="https://www.youtube.com/embed/RrCO88AJhaw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		
+		
+		
+		<div class="parallax-iwazaru zone" style="top:110vw; height:50vw;">
+			<div class="yt" style="
+				top:  0vw; 
+				left: 60vw;
+				width: 25vw;
+				height: 25vw;
+			">
+				<iframe width="100%" height="100%" src="https://www.youtube.com/embed/RrCO88AJhaw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			</div>
+			
+			<div class="parallax-iwazaru">
+				<img src="img/iwazaru.png" style="width:100%;">
+			</div>
 		</div>
+		
+		
 		
 		<div class="img" style="
 			top:   180vw; 
