--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
 	
 	<body>
 	
+	
+	    <a href="https://0ooo47k.github.io/gallery/">
+           <img src="A-hp-fb-gallery" alt="Gallery" style="width:42px;height:42px;">
+        </a>
+	
 		<div class="video-bg">
 			<video autoplay loop muted>
 			  <source src="files/chaogarden-bg.webm" type="video/webm" />
